Testing, checks, constructor argument for passing a known decomposition

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
 CXX=mpic++
 CXXFLAGS= -O3 -std=c++11 -march=native -g -Wall
 
-all: benchmark test ddtest
+all: clean benchmark test ddtest
 
 benchmark: benchmark.cpp ../fsgrid.hpp
 	$(CXX) $(CXXFLAGS) -o $@ $<
@@ -11,4 +11,4 @@ ddtest: ddtest.cpp
 	$(CXX) $(CXXFLAGS) -o $@ $<
 
 clean:
-	-rm test
+	-rm test ddtest benchmark
