Fixes to loss function, legacy pathway removed. Added tie-breaker for preferring decompositions with singleton dimensions and an option to choose between different equally-weighted decompositions.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,7 @@
 CXX=mpic++
-CXXFLAGS= -O3 -std=c++11 -march=native -g -Wall
+# CXXFLAGS= -O3 -std=c++17 -ffast-math -march=native -g -Wall
+CXXFLAGS= -O3 -std=c++17 -march=native -g -Wall
+# CXXFLAGS= -O0 -std=c++17 -march=native -g -Wall
 
 all: clean benchmark test ddtest
 
