Revert back to header only, add MPI_CXX flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.18)
 
-project(${project_name} VERSION 1.0 DESCRIPTION "Fsgrid" LANGUAGES CXX C)
+project(${project_name} VERSION 1.0 DESCRIPTION "Fsgrid" LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # TODO: add compiler flags for more warnings
+
 set(install_dir "${PROJECT_NAME}")
 
 add_subdirectory(src)
