--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,11 @@
 cmake_minimum_required(VERSION 3.18)
 
-project(${project_name} VERSION 1.0 DESCRIPTION "Fsgrid" LANGUAGES CXX)
+project(${project_name} VERSION 1.0 DESCRIPTION "Fsgrid testing with ctest and googletest" LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # TODO: add compiler flags for more warnings
-
-set(install_dir "${PROJECT_NAME}")
-
-add_subdirectory(src)
 
 option(package_tests "Build tests" ON)
 if(package_tests)
