--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.18)
+cmake_minimum_required(VERSION 3.18...3.24)
 
 project(${project_name} VERSION 1.0 DESCRIPTION "Fsgrid testing with ctest and googletest" LANGUAGES CXX)
 
@@ -7,15 +7,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # TODO: add compiler flags for more warnings
 
-# Use Cmake module FetchContent to download googletest
-# Use the full hash of the git commit of the version of googletest you want to use
-# f8d7d77c06936315286eb55f8de22cd23c188571 is the full hash of googletest version 1.14.0
-
+# Download googletest as a dependency
 include(FetchContent)
 FetchContent_Declare(
   googletest
-  URL https://github.com/google/googletest/archive/f8d7d77c06936315286eb55f8de22cd23c188571.zip
-  DOWNLOAD_EXTRACT_TIMESTAMP TRUE
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  GIT_TAG        f8d7d77c06936315286eb55f8de22cd23c188571 # release-1.14.0
 )
 FetchContent_MakeAvailable(googletest)
 
