Change test name

--- a/tests/mpi_tests/CMakeLists.txt
+++ b/tests/mpi_tests/CMakeLists.txt
@@ -6,7 +6,7 @@ set(testname ${PROJECT_NAME}_mpi_tests)
 
 add_executable(${testname}
     main.cpp
-    foo.cpp
+    domain_decomposition.cpp
 )
 
 target_include_directories(${testname} PRIVATE
